fix: board mask and movile view using fullScreen as flex component and mediaQuerys to handle scale on small vp-devices

--- a/src/components/molecules/FuFullScreen/fullScreen.scss
+++ b/src/components/molecules/FuFullScreen/fullScreen.scss
@@ -3,4 +3,8 @@
   height: 100%;
 
   position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
